src/test/deca/context/invalid/class/concatenation_method_wrong_param.deca
//// Description:
// 	  composition de method  
// 	
// Resultats:
// 	  INVALID_NB_PARAMETERS: Invalid number of parameters for the call of method m7
//    line 38
// Historique:
// 	  cree le 21/01/2023

class A {

    protected int i;

    int method1 (int i) {
        return i;
    }

    int m2(int i) { 
        return i;
    }
    int m3(int i) { 
        return i;
    }
    int m4(int i) { 
        return i;
    }
    int m5(int i) { 
        return i;
    }
    int m6(int i) { 
        return i;
    }
    int m7(int i) { 
        return i;
    }

    void initI(float y) {
        this.i = method1( m2( m3( m4( m5( m6( m7( ) ) ) ) ) ) );
    }
    float getI() {return this.i;}
}

{
    A a = new A();
    a.initI(8);
    print(a.getI());


}